mysql.tf
# Create Database Sunet Group
 
resource "aws_db_subnet_group" "databasesubnetgroup" {
  name       = "main"
  subnet_ids = [aws_subnet.database-subnet-1.id, aws_subnet.database-subnet-2.id]

  tags = {
    Name = "My DB subnet group"
  }
}

resource "aws_db_instance" "database" {
  allocated_storage      = 10
  db_subnet_group_name   = aws_db_subnet_group.databasesubnetgroup.id
  engine                 = "mysql"
  engine_version         = "8.0.20"
  instance_class         = "db.t2.micro"
  multi_az               = true
  name                   = "mydb"
  username               = "admin"
  password               = "XsG2HjcOTd41Ivyft0vk"
  skip_final_snapshot    = true
  vpc_security_group_ids = ["${aws_security_group.database-sg.id}"]
}
